examples/type_system/failing/126_list_comprehension_missing_close_bracket.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/126_list_comprehension_missing_close_bracket.flx
// error[E034]: Missing Closing Delimiter
//
// Expected `]` to close list comprehension.
//
//   examples/type_system/failing/126_list_comprehension_missing_close_bracket.flx:21:1
//    |
// 21 | let after = 3
//    | ^^^
//
// Hint:
//   List comprehensions use `[expr | x <- xs, ...]`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let ys = [x + 1 | x <- [1, 2]
let after = 3
